--- a/styles.css
+++ b/styles.css
@@ -5,4 +5,97 @@ body {
     margin: 0;
     overflow: hidden;
     font-family: Roboto, sans-serif;
+    overflow: auto;
+}
+
+header {
+    color: white;
+    background-color: #1f2937;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 16px 0;
+}
+
+.header-logo {
+    font-size: 24px;
+    color: #f9faf8;
+    font-weight: bold;
+}
+
+.header-link {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    gap: 16px;
+}
+
+.li {
+    text-decoration: none;
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    background-color: #1f2937;
+}
+
+.headline {
+    display: flex;
+    height: 45vh;
+    color: #f9faf8;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0 100px;
+    gap: 32px;
+}
+
+.left-side {
+    text-wrap: wrap;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    width: 50vw;
+}
+
+p {
+    font-size: 18px;
+}
+
+h1 {
+    font-size: 48px;
+    font-weight: bolder;
+    padding: 0;
+    margin: 0;
+}
+
+.sign-up-headline {
+    width: 100px;
+    height: 40px;
+    border-radius: 10px;
+    background-color: #3882f6;
+    border-color: #3882f6;
+    color: #f9faf8;
+    font-weight: bold;
+}
+
+.right-side {
+    width: 50vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.image-container {
+    width: 500px;
+    height: 200px;
+    border: 1px solid #c0c0c0;
+    background-color: #c0c0c0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #1f2937;
 }
