--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ header {
     gap: 16px;
 }
 
-.li {
+a {
     text-decoration: none;
     color: #e5e7eb;
     font-size: 18px;
@@ -44,11 +44,10 @@ header {
 
 .headline {
     display: flex;
-    height: 45vh;
     color: #f9faf8;
     justify-content: space-around;
     align-items: center;
-    padding: 0 100px;
+    padding: 100px;
     gap: 32px;
 }
 
@@ -98,4 +97,41 @@ h1 {
     align-items: center;
     justify-content: center;
     color: #1f2937;
+}
+
+.information {
+    padding: 32px;
+    background-color: #e5e7eb;
+    text-align: center;
+    padding-bottom: 40px;
+}
+
+h2 {
+    font-size: 36px;
+    color: #1f2937;
+}
+
+.cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 20px;
+}
+
+.card {
+    width: 150px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 12px;
+}
+
+.card-image {
+    width: 100px;
+    height: 100px;
+    border: 2px solid #3882f6;
+    border-radius: 10px;
+    margin-bottom: 12px;
 }
